force-app/main/default/objects/Volunteer_Info__c/Volunteer_Info__c.object-meta.xml
<CustomObject>
    <label>Volunteer Info</label>
    <nameField>
        <displayFormat>VOL{000000}</displayFormat>
        <label>Volunteer Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>