force-app/main/default/objects/Volunteer_Info__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Volunteers Info</relationshipLabel>
    <relationshipName>Volunteers_Info</relationshipName>
    <type>Lookup</type>
</CustomField>