force-app/main/default/objects/Volunteer_Info__c/fields/Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is the date the volunteer hours occurred on</description>
    <inlineHelpText>If the date the volunteer hours was not today. Please select the correct date</inlineHelpText>
    <label>Volunteer Date</label>
    <type>Date</type>
</CustomField>