force-app/main/default/objects/Volunteer_Info__c/fields/Volunteer_Hours_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Assigned__c</fullName>
    <label>Volunteer Hours Assigned</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>