force-app/main/default/objects/Volunteer_Info__c/fields/Volunteer_Hours_Pending__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Pending__c</fullName>
    <formula>Volunteer_Hours_Assigned__c -  Volunteer_Hours_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Hours Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>