force-app/main/default/objects/Volunteer_Info__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <description>Only Enter Volunteer Name</description>
    <inlineHelpText>Only Enter Volunteer Name</inlineHelpText>
    <label>Volunteer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Volunteer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteers Info (Contact)</relationshipLabel>
    <relationshipName>Volunteers_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>